--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "example-script": "npx tsx scripts/example.ts"
   },
   "dependencies": {
-    "@antoinette-agency/sofetch": "^1.3.1",
-    "next": "16.1.1",
+    "@antoinette-agency/sofetch": "^1.4.0",
+    "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "jest": "^30.2.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5"
   }
