--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@antoinette-agency/sofetch": "^1.4.0",
+    "mongodb": "^6.21.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "ts-dotenv": "^0.9.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
